--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -68,11 +68,18 @@ nav {
 
 #startimage {
   padding: 1.5rem 2rem;
-  margin-right: -18rem;
+}
+
+#startimagecontain {
+  max-width: 60%;
+}
+
+#starttextcontain {
+  max-width: 400px;
 }
 
 #startimage img {
-  width: 60%;
+  width: 100%;
   height: auto;
 }
 
@@ -80,13 +87,11 @@ nav {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 40%;
-  max-width: 300px;
 }
 
 #starttext h1 {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 #starttext h2 {
@@ -101,4 +106,66 @@ nav {
   text-align: center;
   color: white;
   background-color: grey;
+}
+
+/* Section - Practice & Articles */
+
+/* Practice Left */
+
+#Practicesection {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+#practiceLeft {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 60%;
+  margin: 1.5rem 2rem;
+}
+
+#practiceLeft h1 {
+  font-weight: bold;
+  font-size: 2rem;
+  padding-bottom: 1.5rem;
+}
+
+#practiceLeft p {
+  padding-bottom: 1.5rem;
+}
+
+#practiceLeft h5 {
+  font-weight: bold;
+  padding-bottom: 2rem;
+}
+
+#practiceLeft img {
+  width: 100%;
+  height: auto;
+}
+
+/* Practive Right */
+
+#practiceleft1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 30%;
+}
+
+#practiceleft1image {
+  max-width: 35%;
+  height: auto;
+}
+
+#practiceleft1image img {
+  width: 100%;
+  height: auto;
+}
+
+#practiceleft1text {
+  max-width: 65%;
+  height: auto;
 }
