--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -75,7 +75,7 @@ nav {
 }
 
 #starttextcontain {
-  max-width: 400px;
+  max-width: 250px;
 }
 
 #startimage img {
@@ -279,7 +279,7 @@ nav {
 }
 
 .learnings {
-  max-width: 33%;
+  width: 33%;
   height: auto;
   margin-right: 2rem;
   margin-bottom: 2rem;
