--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -279,20 +279,17 @@ nav {
   font-size: 2rem;
 }
 
-.learninggridtop {
+.learninggrid {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   max-width: 1200px;
-}
-
-.learninggridbottom {
-  display: flex;
-  flex-direction: row;
-  max-width: 1200px;
+  align-content: center;
+  justify-content: center;
 }
 
 .learnings {
-  width: 33%;
+  width: 30%;
   height: auto;
   margin-right: 2rem;
   margin-bottom: 2rem;
@@ -348,8 +345,6 @@ nav {
 .thesisstories {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .thesisleft {
@@ -377,9 +372,11 @@ nav {
 
 .thesisstory1image,
 .thesisstory2image {
-  max-width: 35%;
+  width: 35%;
   height: auto;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
 }
 
 .thesisstory1image img {
@@ -399,7 +396,7 @@ nav {
 
 .thesisstory1text,
 .thesisstory2text {
-  max-width: 65%;
+  width: 65%;
   height: auto;
   margin-left: 1rem;
 }
@@ -432,6 +429,8 @@ nav {
   padding-bottom: 0.5rem;
   font-weight: bold;
 }
+
+/* Footer */
 
 footer {
   display: flex;
