--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -442,6 +442,49 @@ nav {
   background-color: white;
 }
 
+#learningmobile {
+  display: none;
+}
+
+@media only screen and (max-width: 710px) {
+  #learningmobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #learning {
+    display: none;
+  }
+
+  #learningmobilemenu {
+    width: 100%;
+    height: auto;
+  }
+
+  .learningmobileheader {
+    padding-bottom: 1rem;
+    padding-top: 2rem;
+    font-weight: bold;
+    font-size: 2rem;
+  }
+
+  .learningmobilemenu {
+    background-color: grey;
+    margin-bottom: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .learningmobilemenu h2 {
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    padding-left: 1rem;
+    font-size: 1.5rem;
+  }
+}
+
 /* Section - Thesis */
 
 #thesiscontainer {
