--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -124,7 +124,7 @@ nav {
   padding-bottom: 0.5rem;
   text-align: center;
   color: white;
-  background-color: #09b24e;
+  background-color: #ff7b33;
 }
 
 #startsectionmobile {
@@ -167,7 +167,7 @@ nav {
 
   .startbuttonmobile {
     text-align: center;
-    background-color: grey;
+    background-color: #ff7b33;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     margin-bottom: 2rem;
@@ -294,7 +294,7 @@ nav {
   display: flex;
   flex-direction: row;
   padding: 1rem;
-  background-color: #ff948c;
+  background-color: #ff7b33;
 }
 
 #story3 .story3image {
@@ -471,7 +471,7 @@ nav {
   }
 
   .learningmobilemenu {
-    background-color: grey;
+    background-color: #ff7b33;
     margin-bottom: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -517,7 +517,7 @@ nav {
 }
 
 .story1 {
-  background-color: #ff948c;
+  background-color: #ff7b33;
 }
 
 .thesisstory1image,
