--- a/Resources/CSS/Index.css
+++ b/Resources/CSS/Index.css
@@ -111,12 +111,18 @@ nav {
 #starttext h1 {
   font-weight: bold;
   font-size: 2rem;
+  color: white;
 }
 
 #starttext h2 {
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-weight: 400;
+  color: white;
+}
+
+#startbutton {
+  box-shadow: 5px 5px 20px black;
 }
 
 #startbutton h2 {
@@ -152,11 +158,13 @@ nav {
     padding-top: 2rem;
     font-weight: bold;
     font-size: 2rem;
+    color: white;
   }
 
   .starttextmobile h2 {
     padding-bottom: 1.5rem;
     font-weight: 400;
+    color: white;
   }
 
   .starttextmobile,
@@ -172,6 +180,7 @@ nav {
     padding-bottom: 0.5rem;
     margin-bottom: 2rem;
     color: white;
+    box-shadow: 5px 5px 20px black;
   }
 }
 
@@ -295,6 +304,7 @@ nav {
   flex-direction: row;
   padding: 1rem;
   background-color: #ff7b33;
+  box-shadow: 5px 5px 20px black;
 }
 
 #story3 .story3image {
@@ -384,6 +394,7 @@ nav {
 .header h1 {
   font-weight: bold;
   font-size: 2rem;
+  color: white;
 }
 
 .learninggrid {
@@ -400,6 +411,7 @@ nav {
   height: auto;
   margin-right: 2rem;
   margin-bottom: 2rem;
+  box-shadow: 5px 5px 20px black;
 }
 
 .learning1text,
@@ -461,6 +473,7 @@ nav {
   #learningmobilemenu {
     width: 100%;
     height: auto;
+    color: white;
   }
 
   .learningmobileheader {
@@ -475,6 +488,7 @@ nav {
     margin-bottom: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem;
+    box-shadow: 5px 5px 20px black;
   }
 
   .learningmobilemenu h2 {
@@ -518,6 +532,7 @@ nav {
 
 .story1 {
   background-color: #ff7b33;
+  box-shadow: 5px 5px 20px black;
 }
 
 .thesisstory1image,
